# clipboard-history

./: .gitignore  README.md  hud.html  index.html  metadata.json  package-lock.json  package.json  test-image-detection.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: clipitem-style-naming.md  filelist-style-naming.md  input-module-architecture.md  service-api-usage-matrix.md  settings-modal-style-naming.md  style-naming-overview.md  tagmanager-style-naming.md
scripts/: audit-clipitem-imports.mjs  audit-clipitem-style.mjs  audit-docs-links.mjs  audit-filelist-style.mjs  audit-service-usage.mjs  audit-settings-style.mjs  audit-tagmanager-style.mjs  dev-force.mjs  dev-single-instance.mjs
src/: App.tsx  ClipItemHudApp.tsx  DownloadHudApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  image_handler.rs  input.rs  ipc.rs  lib.rs  main.rs  settings.rs  storage.rs
src-tauri/src/clipboard/: code_detection.rs  formats.rs  listener.rs  mod.rs  save.rs
src-tauri/src/clipboard/tests/: code_detection_tests.rs  listener_tests.rs  save_tests.rs
src-tauri/src/db/: cleanup.rs  config.rs  history.rs  schema.rs  storage.rs  tags.rs
src-tauri/src/db/tests/: cleanup_tests.rs  config_tests.rs  history_tests.rs  schema_tests.rs  storage_tests.rs  tags_tests.rs
src-tauri/src/image_handler/: clipboard_writer.rs  commands.rs  config.rs  error.rs  handler.rs  loader.rs  mod.rs  pipeline.rs  service.rs  source.rs
src-tauri/src/image_handler/tests/: clipboard_writer_tests.rs  handler_tests.rs  loader_tests.rs  service_tests.rs
src-tauri/src/input/: commands.rs  platform.rs  services.rs
src-tauri/src/window_position/: calculation.rs  cursor.rs  mod.rs  monitor.rs  window_state.rs
src-tauri/src/window_position/tests/: calculation_tests.rs  cursor_tests.rs  monitor_tests.rs  window_state_tests.rs
src-tauri/tests/: clipboard_test.rs  code_detection_test.rs  db_cleanup_perf.rs  test_user_code.rs
src/components/: AddSnippetModal.tsx  ClipList.test.tsx  ClipList.tsx  DownloadProgressIndicator.test.tsx  DownloadProgressIndicator.tsx  FileListDisplay.tsx  FloatingTagSelector.tsx  Footer.tsx  Header.tsx  ImageDisplay.test.tsx  ImageDisplay.tsx  LargeImagePreview.tsx  SettingsModal.tsx  TagManagerModal.tsx  Toast.tsx
src/constants/: index.ts  ipc.ts
src/contexts/: AppContext.tsx  ClipboardContext.tsx  SettingsContext.tsx  UIContext.drag.test.tsx  UIContext.tsx
src/hooks/: useAnimationProfile.ts  useClipboard.test.ts  useClipboard.ts  useImageResource.ts  useKeyboardNavigation.ts  usePopoverPosition.ts  useSettings.test.ts  useSettings.ts  useShortcuts.ts  useStats.ts
src/hud/: HudHost.tsx  icons.tsx  index.ts  main.tsx  subscribe.ts
src/services/: copyRouter.ts  db.ts  tauri.ts
src/styles/: clipitem-hud.css
src/types/: index.ts
src/utils/: color.ts  colorConvert.ts  dateTimeDetect.ts  download.ts  filePath.ts  formatDate.ts  hudActions.ts  imageCache.test.ts  imageCache.ts  imageDetect.ts  imageUrl.ts  index.test.ts  index.ts  languageDetect.ts  motionPresets.ts  shortcut.ts  stringUtils.ts
tests/components/: ClipItemCodeSnippet.test.tsx  ClipItemImageGalleryInteraction.test.tsx  ClipItemLayout.test.tsx  ClipItemLayoutIntegration.test.tsx  ClipList.test.tsx  DownloadProgressIndicator.test.tsx  ImageDisplay.test.tsx  ImageDisplayIntegration.test.tsx  (+1 more)
(+186 files in other folders)
