[package]
name = "clipboard-history"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon", "image-png", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
clipboard-master = "4.0.0"
enigo = "0.6.1"
tokio = { version = "1.49", features = ["time", "macros", "rt-multi-thread"] }
arboard = "3.6.1"
image = "0.25.9"
fast_image_resize = { version = "6.0", features = ["image"] }
chrono = "0.4"
base64 = "0.22"
infer = "0.19"
reqwest = { version = "0.13", features = ["stream"] }
rusqlite = { version = "0.38", features = ["bundled"] }
once_cell = "1.21"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
regex = "1.12"

[dev-dependencies]
proptest = "1.10"
